Fixed card overflow issue

--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@
     min-height: 100vh;
     align-items: center;
     font-family: 'Manrope', sans-serif;
+    padding: 0.75rem;
     background-color: var(--bg_blue);
   }
 
@@ -97,7 +98,6 @@
     width: 100%;
     max-width: 25rem;
     border-radius: 0.5rem;
-    margin: 0.75rem;
     overflow: hidden;
     background-color: var(--white);
     box-shadow: 0rem 2.5rem 2.5rem -0.625rem rgba(201, 213, 225, 0.503415);
